static/css/base.css
/* ... */
/* ----- Blog page ------- */

.wrap_img {
	height:50vh;
	min-height: 30vh;
	object-fit: cover;
	width: 100%;
}

/* ----- Blog detail page ------- */

figure .wrap_img {
	display: block;
	max-height: 100vh;
	max-width: 80vh;
}

.blog_img {
	height: 100%;
	object-fit: cover;
	width: 100%;
}

/* ----- Footer ------- */

.footer
{
  background-color: var(--first-color);
  padding:45px 0 20px;
  font-size:15px;
  line-height:24px;
  color: var(--second-color);
}
.footer hr
{
  border-top-color: var(--second-color);
  opacity:0.5
}
.footer hr.small
{
  margin:20px 0
}
.footer h6
{
  color: var(--second-color);
  font-size:16px;
  font-weight: bolder;
  text-transform:uppercase;
  margin-top:5px;
  letter-spacing:2px
}

.footer .social-icons a
{
  width:40px;
  height:40px;
  line-height:40px;
  margin-left:6px;
  margin-right:0;
  border-radius:100%;
  background-color: var(--second-color);
}
.copyright
{
  margin:0
}

.social-icons a:first-child {
    margin-left: 0;
}

/* ----- Media Queries ------- */

/* Slightly larger container on xl screens */
@media (min-width: 1200px) {
  .container {
    max-width: 80%;
  }
}

/* fixed top navbar only on medium and up */
@media (min-width: 992px) {
    .fixed-top-desktop-only {
        position: fixed;
        top: 0;
        right: 0;
        left: 0;
        z-index: 1030;
    }

    .header-container {
        padding-top: 164px;
    }
}

@media screen and (min-width: 768px) {
  body {
    margin: 0; 
    }
    .home{
    grid-template-columns: 4fr 3fr;
    grid-template-rows: 1fr;
     height: 100vh;
    }
    .home__about{
    grid-template-columns: 4fr 3fr;
    grid-template-rows: 1fr;
    height: 50vh;
    overflow: hidden;
    }
    .home__primary {
    justify-content: center;
    }
    .home__img img {
    position: absolute;
    width: 500px;
    height: 500px;
    top: 5%;
    left: 0;
    right: 0;
    bottom: 0;
    margin: auto;
    z-index: var(--z-normal);
    }
    .btn__hero{
    position: absolute;
    top: 80%;
    left: auto;
    right: 41%;
    margin: auto;
    z-index: var(--z-normal);
    background: var(--second-color);
    color: white;
    margin-top: 15px;
    }
    .home__year {
    writing-mode: vertical-rl;
    margin-left: 5rem;
    }
    .text__box {
    align-items: center;
    justify-items: center;
}
}

/* pad the top a bit when navbar is collapsed on mobile */
@media (max-width: 991px) {
    .header-container {
        padding-top: 16px;
    }

    body {
        height: calc(100vh - 116px);
    }

    .nav__bg{
        background-color: var(--white-color);
    }

    .display-4.logo-font.text-full {
        font-size: 2rem;
    }

    .nav-link {
        padding: 0.15rem;
    }

    .nav-link i.fa-lg {
        font-size: 1rem;
    }

    .navbar-toggler {
        padding: .6rem .6rem;
        font-size: 1rem;
        color: var(--second-color);
    }

    #delivery-banner h4 {
        font-size: .9rem;
    }

    .btn.btn-full.rounded-0 {
        padding: .375rem .375rem;
    }

    .btn.btn-full.rounded-0.btn-lg {
        padding: .375rem .375rem;
        font-size: .75rem;
    }

}

@media (max-width:991px)
{
  .footer [class^=col-]
  {
    margin-bottom:30px
  }
}
@media (max-width:767px)
{
  .footer
  {
    padding-bottom:0;
    text-align: center;
  }
}
.social-icons
{
  padding-left:0;
  margin-bottom:0;
  list-style:none
}
.social-icons li
{
  display:inline-block;
  margin-bottom:4px
}
.social-icons li.title
{
  margin-right:15px;
  text-transform:uppercase;
  color:var(--second-color);
  font-weight:700;
  font-size:13px
}
.social-icons a{
  background-color:var(--second-color);
  color: var(--first-color);
  font-size:16px;
  display:inline-block;
  line-height:44px;
  width:44px;
  height:44px;
  text-align:center;
  margin-right:8px;
  border-radius:100%;
}
.social-icons a:active,.social-icons a:focus,.social-icons a:hover
{
  color:var(--second-color);
  background-color:var(--first-color);
}
.social-icons.size-sm a
{
  line-height:34px;
  height:34px;
  width:34px;
  font-size:14px
}
@media (max-width:767px)
{
  .social-icons li.title
  {
    display:block;
    margin-right:0;
    font-weight:600
  }
}

